--- a/FinancialAssistant.Web/Pages/ForgotPassword.cshtml
+++ b/FinancialAssistant.Web/Pages/ForgotPassword.cshtml
@@ -1,53 +1,27 @@
 ﻿@page
 @model FinancialAssistant.Web.Pages.ForgotPasswordModel;
 @{
-    Layout = null;
+    Layout = "Shared/_Authentication";
     ViewData["Title"] = "Восстановление пароля";
+    ViewData["CssHref"] = "/css/forgotPassword.css";
 }
 
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewData["Title"]</title>
+<div class="forgot-password-container">
+    <h2 class="text-center">@ViewData["Title"]</h2>
 
-    <!-- Подключение Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/forgotPassword.css" /> <!-- Подключение стилей логина -->
-</head>
-<body>
-
-    <div class="forgot-password-container">
-        <h2 class="text-center">@ViewData["Title"]</h2>
-
-        <form method="post">
-            <div class="form-group">
-                <label for="Email">Электронная почта:</label>
-                <input type="email" id="Email" name="Email" class="form-control" required placeholder="Введите вашу электронную почту" />
-            </div>
-            <div class="text-center">
-                <button type="submit" class="btn btn-primary">Отправить ссылку для сброса пароля</button>
-            </div>
-            <div class="text-center mt-3">
-                <p>
-                    Вспомнили пароль? <a href="/Login">Войдите</a>
-                </p>
-            </div>
-        </form>
-
-        <!-- Сообщение об ошибке -->
-        <div class="error-message">
-            <!-- Здесь будет выводиться сообщение об ошибке, если оно есть -->
-            <!-- Например: @Model.ErrorMessage -->
+    <form method="post">
+        <div class="form-group">
+            <label for="Email">Электронная почта:</label>
+            <input type="email" id="Email" name="Email" class="form-control" required placeholder="Введите вашу электронную почту" />
         </div>
-    </div>
-
-    <!-- Подключение jQuery и Bootstrap JS -->
-    <!--
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    -->
-</body>
-</html>
+        <div class="text-center">
+            <button type="submit" class="btn btn-primary">Отправить ссылку для сброса пароля</button>
+        </div>
+        <div class="text-center mt-3">
+            <p>
+                Вспомнили пароль? <a href="/Login">Войдите</a>
+            </p>
+        </div>
+    </form>
+    <partial name="Shared/_ErrorMessage" model="@Model.ErrorMessage"/>
+</div>
