feat: to do authorization and authentication.

--- a/FinancialAssistant.Web/Pages/ForgotPassword.cshtml
+++ b/FinancialAssistant.Web/Pages/ForgotPassword.cshtml
@@ -19,9 +19,8 @@
         </div>
         <div class="text-center mt-3">
             <p>
-                Вспомнили пароль? <a href="/Login">Войдите</a>
+                Вспомнили пароль? <a asp-page="/Login">Войдите</a>
             </p>
         </div>
     </form>
-    <partial name="Shared/_ErrorMessage" model="@Model.ErrorMessage"/>
 </div>
